# brave-core

browser/: BUILD.gn  sources.gni
browser/brave_ads/android/: brave_ads_native_helper.h
browser/brave_ads/notifications/: BUILD.gn  ad_notification_platform_bridge.cc  ad_notification_platform_bridge.h  ad_notification_platform_bridge_android.cc
browser/permissions/: sources.gni
browser/ui/: BUILD.gn
browser/ui/brave_ads/: BUILD.gn  ad_notification_background_painter.cc  ad_notification_background_painter.h  ad_notification_control_buttons_view.cc  ad_notification_control_buttons_view.h  ad_notification_header_view.cc  ad_notification_header_view.h  ad_notification_popup.cc  ad_notification_popup.h  ad_notification_view.cc  ad_notification_view.h  ad_notification_view_factory.cc  ad_notification_view_factory.h  bounds_util.cc  bounds_util.h  font_util.cc  font_util.h  insets_util.cc  insets_util.h  padded_image_button.cc  padded_image_button.h  padded_image_view.cc  padded_image_view.h  spacer_view.cc  spacer_view.h  text_ad_notification_view.cc  text_ad_notification_view.h
components/brave_ads/browser/: BUILD.gn  DEPS  ad_notification.cc  ad_notification.h  ad_notification_delegate.h  ad_notification_util.cc  ad_notification_util.h  ads_notification_handler.cc  ads_notification_handler.h  ads_service.cc  ads_service.h  ads_service_factory.cc  ads_service_factory.h  ads_service_impl.cc  ads_service_impl.h
components/brave_ads/common/: pref_names.cc  pref_names.h
components/permissions/: BUILD.gn
test/: BUILD.gn
(+8 files in other folders)
