source_set("notifications") {
  sources = [
    "ad_notification_platform_bridge.cc",
    "ad_notification_platform_bridge.h",
  ]

  if (is_android) {
    sources += [ "ad_notification_platform_bridge_android.cc" ]
  }

  deps = [
    "//base",
    "//brave/browser/profiles",
    "//brave/browser/ui/brave_ads",
    "//brave/components/brave_ads/browser",
    "//brave/vendor/bat-native-ads",
    "//brave/vendor/bat-native-ledger",
    "//skia",
  ]

  if (is_android) {
    deps += [ "//brave/browser/brave_ads/android:jni_headers" ]
  }
}
